resources/k8-manifests/ingress/nginx-ingress.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "example-ingress"
spec:
  defaultBackend:
    service:
      name: "static-website-1"
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: "/static-1"
        pathType: "Prefix"
        backend:
          service:
            name: "static-website-1"
            port:
              number: 80
      - path:  "/static-2"
        pathType: "Prefix"
        backend:
          service:
            name: "static-website-2"
            port:
              number: 80
